[gd_scene load_steps=15 format=2]

[ext_resource path="res://Stun Gun/Stun Beam Gun.png" type="Texture" id=1]
[ext_resource path="res://Stun Gun/StunGun.gd" type="Script" id=2]
[ext_resource path="res://Player/Player.gd" type="Script" id=3]
[ext_resource path="res://Player/Player.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 298, 318, 149, 144 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 447, 318, 149, 144 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 339, 0, 108, 174 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 450, 174, 150, 150 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 336, 0, 110, 172 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 336, 172, 110, 172 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 318, 171, 146, 171 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "death",
"speed": 1.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ) ],
"loop": false,
"name": "gun",
"speed": 2.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 28.9431, 57.2611 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 20.7804, 65.9077 )

[node name="Player" type="KinematicBody2D" groups=["Player"]]
position = Vector2( -31, -9 )
collision_mask = 6
script = ExtResource( 3 )

[node name="Player_animation" type="AnimatedSprite" parent="."]
position = Vector2( 102, 128 )
frames = SubResource( 1 )
animation = "gun"
frame = 1
playing = true

[node name="CollisionShape2D_P" type="CollisionShape2D" parent="."]
position = Vector2( 97.9615, 135 )
scale = Vector2( 1.31425, 1.04783 )
shape = SubResource( 4 )

[node name="Touch_Player" type="Area2D" parent="."]
scale = Vector2( 0.690542, 0.998852 )

[node name="Area_collide" type="CollisionShape2D" parent="Touch_Player"]
position = Vector2( 140.509, 134.154 )
scale = Vector2( 4.10967, 1.02911 )
shape = SubResource( 3 )

[node name="StunGun" type="Sprite" parent="."]
position = Vector2( 132, 156 )
scale = Vector2( 0.0702909, 0.0591679 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Bullet_spawn" type="Position2D" parent="StunGun"]
position = Vector2( 924.729, -33.8022 )
scale = Vector2( 14.2266, 16.9011 )

[node name="Shoot_speed" type="Timer" parent="."]
wait_time = 10.0

[node name="Player\'s Camera" type="Camera2D" parent="."]
position = Vector2( 98, 135 )
current = true
limit_left = 10
limit_top = 0
limit_right = 3300
limit_bottom = 1010
limit_smoothed = true

[connection signal="area_entered" from="Touch_Player" to="." method="_on_Touch_Player_area_entered"]
[connection signal="body_entered" from="Touch_Player" to="." method="_on_Touch_Player_body_entered"]
[connection signal="tree_entered" from="StunGun/Bullet_spawn" to="StunGun" method="_on_Bullet_spawn_tree_entered"]
[connection signal="timeout" from="Shoot_speed" to="." method="_on_Shoot_speed_timeout"]
